# ros2_robot_project

./: .github  .gitignore
log/: latest_build
my_custom_interfaces/: CMakeLists.txt
my_custom_interfaces/install/: local_setup.sh  setup.sh
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/srv/: calculator.h
my_custom_interfaces/install/my_custom_interfaces/include/my_custom_interfaces/my_custom_interfaces/srv/detail/: calculator__builder.hpp  calculator__functions.h  calculator__rosidl_typesupport_fastrtps_c.h  calculator__rosidl_typesupport_introspection_c.h  calculator__type_support.c  calculator__type_support.cpp
my_custom_interfaces/install/my_custom_interfaces/local/lib/python3.10/dist-packages/my_custom_interfaces/: _my_custom_interfaces_s.ep.rosidl_typesupport_c.c  _my_custom_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
my_custom_interfaces/install/my_custom_interfaces/local/lib/python3.10/dist-packages/my_custom_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_my_custom_interfaces__rosidl_generator_cExport-noconfig.cmake  export_my_custom_interfaces__rosidl_generator_cExport.cmake  export_my_custom_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_my_custom_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_custom_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_my_custom_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_custom_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  my_custom_interfaces__rosidl_typesupport_cExport.cmake  my_custom_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  my_custom_interfaces__rosidl_typesupport_cppExport.cmake  my_custom_interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/rust/: Cargo.toml
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/rust/src/: srv.rs
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/rust/src/srv/: rmw.rs
my_custom_interfaces/install/my_custom_interfaces/share/my_custom_interfaces/srv/: Calculator_Response.msg
my_custom_interfaces/log/: latest_build
my_custom_service_interface/: CMakeLists.txt  package.xml
my_custom_service_interface/srv/: Calculator.srv
src/my_custom_action_interface/: CMakeLists.txt  package.xml
src/my_custom_action_interface/action/: Counter.action
src/my_custom_action_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_custom_action_interface/install/my_custom_action_interface/include/my_custom_action_interface/my_custom_action_interface/action/: counter.h  counter.hpp
src/my_custom_action_interface/install/my_custom_action_interface/share/my_custom_action_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/my_custom_action_interface/install/my_custom_action_interface/share/my_custom_action_interface/action/: Counter.idl
src/my_custom_action_interface/install/my_custom_action_interface/share/my_custom_action_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_custom_action_interface__rosidl_generator_cppExport.cmake  export_my_custom_action_interface__rosidl_generator_pyExport.cmake  export_my_custom_action_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_custom_action_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  my_custom_action_interfaceConfig.cmake  my_custom_action_interface__rosidl_typesupport_cppExport.cmake  my_custom_action_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_custom_action_interface__rosidl_typesupport_introspection_cExport.cmake  my_custom_action_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake
src/my_custom_action_interface/log/: latest_build
src/my_custom_service_interface/: package.xml
src/my_custom_service_interface/install/: local_setup.sh  setup.sh
src/my_custom_service_interface/log/: latest_build
src/test_pkg/: CMakeLists.txt  package.xml
src/test_pkg/src/: action_client.cpp  action_server.cpp  mynode.cpp  service_client.cpp  service_server.cpp  subcriber.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/src/: publisher.cpp  service_server.cpp
(+18 files in other folders)
